Update user entry css to remove flex in heading and use margins and padding instead

--- a/app/assets/sass/components/_user-entry.scss
+++ b/app/assets/sass/components/_user-entry.scss
@@ -5,9 +5,7 @@
   }
 
   &__header-content {
-    display: flex;
-    flex-wrap: wrap;
-    gap: nhsuk-spacing(3);
+    padding-top: nhsuk-spacing(1);
   }
 
   &__profile-wrapper {
