--- a/app/views/prototypes/certificates/include/certificate-inline-css.html
+++ b/app/views/prototypes/certificates/include/certificate-inline-css.html
@@ -217,6 +217,16 @@
     }
   }
 
+  .certificate .nhsuk-u-margin-bottom-2 {
+    margin-bottom: 8px !important;
+  }
+
+  @media (min-width: 40.0625em){
+    .certificate .nhsuk-u-margin-bottom-2 {
+      margin-bottom: 8px !important;
+    }
+  }
+
   .certificate .nhsuk-u-margin-bottom-3 {
     margin-bottom: 8px !important;
   }
