--- a/app/views/index.html
+++ b/app/views/index.html
@@ -91,6 +91,32 @@
         </ul>
 
         <hr class="nhsuk-u-margin-top-2 nhsuk-u-margin-bottom-6">
+      </div>
+    </div>
+
+    <div class="nhsuk-grid-row">
+      <div class="nhsuk-grid-column-full">
+
+        <ul class="nhsuk-grid-row nhsuk-card-group">
+          <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
+            {{ card({
+              "href": "/elements",
+              "clickable": "true",
+              "heading": "Elements",
+              "headingClasses": "nhsuk-heading-s",
+              "description": ""
+            }) }}
+          </li>
+        </ul>
+
+        <hr class="nhsuk-u-margin-top-2 nhsuk-u-margin-bottom-6">
+      </div>
+    </div>
+
+
+
+    <div class="nhsuk-grid-row">
+      <div class="nhsuk-grid-column-full">
 
         <div class="nhsuk-u-reading-width">
           <p class="nhsuk-u-margin-bottom-0">Visit the <a href="https://service-manual.nhs.uk">NHS digital service manual</a> for guidance and examples.</p>
