--- a/app/views/elements/index.html
+++ b/app/views/elements/index.html
@@ -18,7 +18,7 @@
 {% block header %}
   {{ header({
     "service": {
-        "name": "Digital Learning Solutions Prototype"
+        "name": "TEL Prototype"
       },
       "homeHref": "/",
       "showNav": "false",
