--- a/app/views/elements/summary-list/index.html
+++ b/app/views/elements/summary-list/index.html
@@ -18,7 +18,7 @@
 {% block header %}
   {{ header({
     "service": {
-        "name": "Digital Learning Solutions Prototype"
+        "name": "TEL Prototype"
       },
       "homeHref": "/",
       "showNav": "false",
@@ -31,10 +31,6 @@
 <!-- For adding a breadcrumb -->
 <!-- Code examples can be found at https://service-manual.nhs.uk/design-system/components/breadcrumbs -->
 {% block beforeContent %}
-  <!-- {{ hero({
-    "heading": "DLS prototype kit",
-    "text": "HTML prototypes for Digital Learning Solutions services."
-  }) }} -->
 {% endblock %}
 
 {% block content %}
@@ -56,7 +52,7 @@
 
         <div class="content-group nhsuk-u-margin-bottom-6">
           <h3>Example 1</h3>
-          <dl class="nhsuk-summary-list proto-summary-list--multiline-description">
+          <dl class="nhsuk-summary-list proto-summary-list--fixed-width-titles">
             <div class="nhsuk-summary-list__row">
               <dt class="nhsuk-summary-list__key">Users Users Users Users Users Users Users Users Users Users Users</dt>
               <dd class="nhsuk-summary-list__value">55 delegates uploaded</dd>
@@ -90,7 +86,7 @@
 
         <div class="content-group nhsuk-u-margin-bottom-6">
           <h3>Example 2</h3>
-          <dl class="nhsuk-summary-list nhsuk-summary-list--no-border proto-summary-list--multiline-description">
+          <dl class="nhsuk-summary-list nhsuk-summary-list--no-border proto-summary-list--fixed-width-titles">
             <div class="nhsuk-summary-list__row">
               <dt class="nhsuk-summary-list__key">Users</dt>
               <dd class="nhsuk-summary-list__value">55 delegates uploaded</dd>
@@ -236,7 +232,7 @@
 
         <hr class="nhsuk-u-margin-bottom-3 nhsuk-u-margin-top-6">
 
-        <dl class="nhsuk-summary-list nhsuk-summary-list--no-border proto-summary-list--multiline-description nhsuk-">
+        <dl class="nhsuk-summary-list nhsuk-summary-list--no-border proto-summary-list--fixed-width-titles nhsuk-">
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">Users</dt>
             <dd class="nhsuk-summary-list__value">{{ uploadUsers | length }} delegates uploaded</dd>
