Update instructional text

--- a/app/views/elements/summary-list/index.html
+++ b/app/views/elements/summary-list/index.html
@@ -42,11 +42,11 @@
         <div class="content-group nhsuk-u-margin-bottom-6 nhsuk-u-reading-width">
           <h2>Modified summary list</h2>
 
-          <p>this addresses three main points:</p>
+          <p>This addresses three main points:</p>
           <ul>
             <li>Removing the boarder from Key, Value and action (DTs and DDs) and setting on the row means the border maintains a consistent width regardless of every item needing an action.</li>
             <li>This implementation allows the use of multiple values (DDs).</li>
-            <li>Setting a fixed on the title DL items are a consistent length across multiple Summary lists (DLs) on a page.</li>
+            <li>Setting a fixed width on __keys and __actions so items are a consistent length across multiple Summary lists (DLs) on a page.</li>
           </ul>
         </div>
 
