Add shorturls redirects to express and update references

--- a/app/views/layouts/layout.html
+++ b/app/views/layouts/layout.html
@@ -24,7 +24,7 @@
       "service": {
         "name": "Digital Learning Solutions Prototype"
       },
-      "homeHref": "/prototypes/admin-frameworks",
+      "homeHref": "/admin-home",
       "showNav": "true",
       "classes": "",
       "primaryLinks": [
@@ -49,7 +49,7 @@
           'label' : 'My account'
         },
         {
-          'url' : '/prototypes/login-journey',
+          'url' : '/login',
           'label' : 'Log out'
         }
       ]
