--- a/app/views/prototypes/admin-frameworks/select-a-framework/framework-dashboard/index.html
+++ b/app/views/prototypes/admin-frameworks/select-a-framework/framework-dashboard/index.html
@@ -15,10 +15,10 @@ NHS.UK prototype kit
 {% block beforeContent %}
 {{ breadcrumb({
   items: [{
-    href: "/prototypes/admin-frameworks",
+    href: "/admin-home",
     text: "Home"
   },{
-    href: "/prototypes/admin-frameworks/select-a-framework",
+    href: "/admin-home/select-a-framework",
     text: "Select a framework"
   }]
 }) }}
