--- a/app/views/prototypes/admin-frameworks/select-a-framework/framework-dashboard/users/users-search.html
+++ b/app/views/prototypes/admin-frameworks/select-a-framework/framework-dashboard/users/users-search.html
@@ -15,16 +15,16 @@
 {% block beforeContent %}
   {{ breadcrumb({
     items: [{
-      href: "/prototypes/admin-frameworks",
+      href: "/admin-home",
       text: "Home"
     },{
-      href: "/prototypes/admin-frameworks/select-a-framework",
+      href: "/admin-home/select-a-framework",
       text: "Select a framework"
     },{
-      href: "/prototypes/admin-frameworks/select-a-framework/framework-dashboard",
+      href: "/admin-home/select-a-framework/framework-dashboard",
       text: "IV Therapy passport"
     },{
-      href: "/prototypes/admin-frameworks/select-a-framework/framework-dashboard/users",
+      href: "/admin-home/select-a-framework/framework-dashboard/users",
       text: "Users"
     }]
   }) }}
@@ -54,7 +54,7 @@
               <a class="proto-in-page-nav__link" href="#">Search users</a>
             </li>
             <li class="proto-in-page-nav__item">
-              <a class="proto-in-page-nav__link" href="/prototypes/register">Register users</a>
+              <a class="proto-in-page-nav__link" href="/register-delegates">Register users</a>
             </li>
             {# <li class="proto-in-page-nav__item">
               <a class="proto-in-page-nav__link" href="#">Send welcome message</a>
