--- a/app/views/prototypes/admin-frameworks/select-a-framework/index.html
+++ b/app/views/prototypes/admin-frameworks/select-a-framework/index.html
@@ -19,7 +19,7 @@ Welcome - DLS prototype
 <!-- Code examples can be found at https://service-manual.nhs.uk/design-system/components/breadcrumbs -->
 {% block beforeContent %}
   {{ breadcrumb({
-    href: "/prototypes/admin-frameworks",
+    href: "/admin-home",
     text: "Home"
   }) }}
 {% endblock %}
@@ -46,7 +46,7 @@ Welcome - DLS prototype
 
         {% set selectAFramework = [{
             "heading": "IV Therapy Passport",
-            "href": "/prototypes/admin-frameworks/select-a-framework/framework-dashboard",
+            "href": "/admin-home/select-a-framework/framework-dashboard",
             "content": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium consequatur quaerat asperiores harum nostrum cum commodi alias modi labore similique cupiditate dolor repellendus recusandae ut sint, ab iste voluptatibus facere?"
           },{
             "heading": "Step 1",
