--- a/app/views/prototypes/login-journey/index.html
+++ b/app/views/prototypes/login-journey/index.html
@@ -12,7 +12,7 @@
     "service": {
         "name": "Digital Learning Solutions Prototype"
       },
-      "homeHref": "/prototypes/login-journey",
+      "homeHref": "/login",
       "showNav": "false",
       "classes": "",
       "primaryLinks": []
