--- a/app/views/prototypes/login-journey/login/index.html
+++ b/app/views/prototypes/login-journey/login/index.html
@@ -11,7 +11,7 @@
     "service": {
         "name": "Digital Learning Solutions Prototype"
       },
-      "homeHref": "/prototypes/login-journey",
+      "homeHref": "/login",
       "showNav": "false",
       "classes": "",
       "primaryLinks": []
@@ -68,7 +68,7 @@
 
           <p>By logging in, I consent to my details being stored and processed in line with your <a href="https://www.hee.nhs.uk/about/privacy-notice" target="_blank">Privacy Policy</a> and agree to use the system according to <a href="/v2/LearningSolutions/Terms" target="_blank">Terms of Use</a></p>
         </div>
-        <a class="nhsuk-button" href="/prototypes/admin-frameworks" >Log in</a> <a class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-left-2" href="#ForgotPassword" role="button">Forgot password</a> <input name="__RequestVerificationToken" type="hidden" value="CfDJ8BnxON2_EAJJqD2p8EJgnrvDi8hssGfgxTl68DNPB9VvO6_AsTlTyUf7PRZ2YO5_eUonMd4mklL50qZYzrGTtodrDDB3ZvlhDyHFA_HVpIJDhh-JT9TCgafNG9VwfJETHbN46fnl3ZmTcy90ICSlOds"><input name="RememberMe" type="hidden" value="false">
+        <a class="nhsuk-button" href="/admin-home" >Log in</a> <a class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-left-2" href="#ForgotPassword" role="button">Forgot password</a> <input name="__RequestVerificationToken" type="hidden" value="CfDJ8BnxON2_EAJJqD2p8EJgnrvDi8hssGfgxTl68DNPB9VvO6_AsTlTyUf7PRZ2YO5_eUonMd4mklL50qZYzrGTtodrDDB3ZvlhDyHFA_HVpIJDhh-JT9TCgafNG9VwfJETHbN46fnl3ZmTcy90ICSlOds"><input name="RememberMe" type="hidden" value="false">
       </form>
 
 
