--- a/app/views/prototypes/register/multiple/index.html
+++ b/app/views/prototypes/register/multiple/index.html
@@ -8,7 +8,7 @@
 
 {% block outerContent %}
   {{ backLink({
-    "href": "/prototypes/register",
+    "href": "/register-delegates",
     "text": "Back to register users",
     "classes": "nhsuk-width-container nhsuk-u-margin-top-4"
   }) }}
