--- a/app/views/index.html
+++ b/app/views/index.html
@@ -45,7 +45,7 @@
         <ul class="nhsuk-grid-row nhsuk-card-group">
           <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
             {{ card({
-              "href": "/prototypes/admin-frameworks",
+              "href": "/admin-home",
               "clickable": "true",
               "heading": "Frameworks admin interface",
               "headingClasses": "nhsuk-heading-s",
@@ -54,7 +54,7 @@
           </li>
           <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
             {{ card({
-              "href": "/prototypes/proficiencies-journey",
+              "href": "/proficiencies",
               "clickable": "true",
               "heading": "Nursing, learner proficiencies",
               "headingClasses": "nhsuk-heading-s",
@@ -63,7 +63,7 @@
           </li>
           <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
             {{ card({
-              "href": "/prototypes/login-journey",
+              "href": "/login",
               "clickable": "true",
               "heading": "Login journey",
               "headingClasses": "nhsuk-heading-s",
@@ -72,7 +72,7 @@
           </li>
           <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
             {{ card({
-              "href": "/prototypes/register",
+              "href": "/register-delegates",
               "clickable": "true",
               "heading": "Register users",
               "headingClasses": "nhsuk-heading-s",
