--- a/app/views/prototypes/admin-frameworks/select-a-framework/framework-dashboard/users/index.html
+++ b/app/views/prototypes/admin-frameworks/select-a-framework/framework-dashboard/users/index.html
@@ -15,13 +15,13 @@
 {% block beforeContent %}
   {{ breadcrumb({
     items: [{
-      href: "/prototypes/admin-frameworks",
+      href: "/admin-home",
       text: "Home"
     },{
-      href: "/prototypes/admin-frameworks/select-a-framework",
+      href: "/admin-home/select-a-framework",
       text: "Select a framework"
     },{
-      href: "/prototypes/admin-frameworks/select-a-framework/framework-dashboard",
+      href: "/admin-home/select-a-framework/framework-dashboard",
       text: "IV Therapy passport"
     }]
   }) }}
@@ -44,7 +44,7 @@
           <li>
               <a class="nhsuk-link nhsuk-body-l nhsuk-u-margin-bottom-4" href="#groups">Groups</a>
           </li>
-          {# 
+          {#
           This may not be needed for frameworks
           <li>
               <a class="nhsuk-link nhsuk-body-l nhsuk-u-margin-bottom-4" href="#Courses">Courses</a>
