--- a/app/views/prototypes/proficiencies-journey/index.html
+++ b/app/views/prototypes/proficiencies-journey/index.html
@@ -25,7 +25,7 @@
   {{ breadcrumb({
     items: [
     {
-      href: "/prototypes/proficiencies-journey",
+      href: "/proficiencies",
       text: "Home"
     }
   ]}) }}
