Add sharthand urls (#7)
* Add shorturls redirects to express and update references

* Ignore files prefixed with reference

* Fix login page url

* Fix rooting urls

--- a/app/views/prototypes/login-journey/index.html
+++ b/app/views/prototypes/login-journey/index.html
@@ -12,7 +12,7 @@
     "service": {
         "name": "Digital Learning Solutions Prototype"
       },
-      "homeHref": "/prototypes/login-journey",
+      "homeHref": "/login",
       "showNav": "false",
       "classes": "",
       "primaryLinks": []
@@ -45,7 +45,7 @@
             </p>
           </div>
           <div class="welcome-page-button-container">
-            <a class="nhsuk-button auth-button auth-button--left nhsuk-u-margin-right-4" href="./login-journey/login" role="button">Log in</a>
+            <a class="nhsuk-button auth-button auth-button--left nhsuk-u-margin-right-4" href="/login/login" role="button">Log in</a>
             <a class="nhsuk-button nhsuk-button--secondary auth-button" href="#register" role="#100">Register</a>
           </div>
         </div>
