--- a/app/assets/sass/components/_task-list.scss
+++ b/app/assets/sass/components/_task-list.scss
@@ -21,7 +21,9 @@ $nhsuk-task-list-hover-color: darken($color_nhsuk-grey-5, 6%);
 // The position is set to 'relative' so than an absolutely-positioned transparent element box
 // can be added within the link so that the whole row can be clickable.
 .nhsuk-task-list__item {
-  display: table;
+  display: flex;
+  align-items: start;
+  flex-wrap: wrap;
   position: relative;
   width: 100%;
   margin-bottom: 0;
@@ -42,16 +44,17 @@ $nhsuk-task-list-hover-color: darken($color_nhsuk-grey-5, 6%);
 }
 
 .nhsuk-task-list__name-and-hint {
-  display: table-cell;
-  vertical-align: top;
+  flex: 1 1 500px; // Note replace flex-basis with breakpoint
+  display: block;
+  // min-width: 400px;
+  margin: 1px 0;
   color: $nhsuk-text-color;
 }
 
 .nhsuk-task-list__status {
-  display: table-cell;
+  display: block;
   padding-left: nhsuk-spacing(2);
   text-align: right;
-  vertical-align: top;
   color: $nhsuk-text-color;
 }
 
@@ -85,6 +88,6 @@ $nhsuk-task-list-hover-color: darken($color_nhsuk-grey-5, 6%);
 }
 
 .nhsuk-task-list__hint {
-  margin-top: nhsuk-spacing(1);
+  margin-top: nhsuk-spacing(2);
   color: $nhsuk-secondary-text-color;
 }
