--- a/app/views/components/task-list/template.njk
+++ b/app/views/components/task-list/template.njk
@@ -1,13 +1,18 @@
-{% from "../../macros/attributes.njk" import nhsukAttributes %}
-{% from "../tag/macro.njk" import tag %}
+{% from "./macros/attributes.njk" import nhsukAttributes %}
+{% from "tag/macro.njk" import tag %}
 
 {%- set idPrefix = params.idPrefix if params.idPrefix else "task-list" -%}
 
 {%- macro _taskListItem(params, item, index) %}
   {%- set hintId = idPrefix + "-" + index + "-hint" %}
   {%- set statusId = idPrefix + "-" + index + "-status" %}
+
+
   <li class="nhsuk-task-list__item {%- if item.href %} nhsuk-task-list__item--with-link{% endif %}{%- if item.classes %} {{ item.classes }}{% endif %}">
+
+
     <div class="nhsuk-task-list__name-and-hint" aria-describedby="{{ hintId + " " if item.hint }}{{ statusId }}">
+
     {% if item.href %}
       <a class="nhsuk-link nhsuk-task-list__link {%- if item.title.classes %} {{ item.title.classes }}{% endif %}" href="{{ item.href }}">
         {{ item.title.html | safe | trim | indent(8) if item.title.html else item.title.text }}
@@ -17,19 +22,26 @@
         {{ item.title.html | safe | trim | indent(8) if item.title.html else item.title.text }}
       </div>
     {% endif %}
+
+    </div>
+
+
+    <div class="nhsuk-task-list__status {%- if item.status.classes %} {{ item.status.classes }}{% endif %}" id="{{ statusId }}">
+      {% if item.status.tag %}
+        {{ tag(item.status.tag) | trim | indent(6) }}
+      {% else %}
+        {{ item.status.html | safe | trim | indent(6) if item.status.html else item.status.text }}
+      {% endif %}
+    </div>
+
+
     {% if item.hint %}
-      <div id="{{ hintId }}" class="nhsuk-task-list__hint">
+      <div id="{{ hintId }}" class="nhsuk-task-list__hint nhsuk-u-reading-width">
         {{ item.hint.html | safe | trim | indent(8) if item.hint.html else item.hint.text }}
       </div>
     {% endif %}
-    </div>
-    <div class="nhsuk-task-list__status {%- if item.status.classes %} {{ item.status.classes }}{% endif %}" id="{{ statusId }}">
-    {% if item.status.tag %}
-      {{ tag(item.status.tag) | trim | indent(6) }}
-    {% else %}
-      {{ item.status.html | safe | trim | indent(6) if item.status.html else item.status.text }}
-    {% endif %}
-    </div>
+
+
   </li>
 {%- endmacro %}
 
