Add global layout comonent - content-group

--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -12,6 +12,7 @@
 @import 'variables';
 @import 'functions';
 @import 'mixins';
+@import 'global';
 
 @import 'components/utitlties';
 @import 'components/picture';
