--- a/app/assets/sass/_global.scss
+++ b/app/assets/sass/_global.scss
@@ -2,4 +2,48 @@
   @include reading-width();
 
   margin-bottom: nhsuk-spacing(6);
+
+  // Overrides the standard p bottom margin before a list to show a closer typographic relationship to the previous content
+  p + ul,
+  p + ol {
+    margin-top: -#{nhsuk-spacing(3)};
+  }
+
+  // .nhsuk-button + .nhsuk-button {
+  //   margin-left: nhsuk-spacing(4);
+  // }
+}
+
+// TODO - This needs to be moved into a forms partial
+/* file upload button */
+input[type="file"] {
+  height: auto;
+  padding: 4px 4px 6px;
+  border-radius: $global-radius;
+  border-color: $nhsuk-form-border-color;
+
+  &::file-selector-button {
+    height: 40px;
+    margin-right: 16px;
+    padding: 0 16px;
+    border: 1px solid $color_nhsuk-grey-4;
+    border-radius: $global-radius;
+    background-color: $color_nhsuk-white;
+    box-shadow: 0px 2px 0px $color_nhsuk-grey-4;
+    transition: background-color 200ms;
+    color: $nhsuk-link-color;
+    text-decoration: underline;
+    cursor: pointer;
+  }
+
+  &::file-selector-button:hover,
+  &::file-selector-button:active {
+    color: $color_nhsuk-dark-pink;
+    text-decoration: none;
+  }
+}
+
+img {
+  max-width: 100%;
+  // margin-bottom: nhsuk-spacing(4);
 }
