--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -15,6 +15,7 @@
 @import 'global';
 
 @import 'components/utitlties';
+@import 'components/form-elements';
 @import 'components/picture';
 @import 'components/featured-media';
 @import 'components/search';
