--- a/app/views/index.html
+++ b/app/views/index.html
@@ -70,9 +70,10 @@
               "description": ""
             }) }}
           </li>
+          {# /paper-transfer/have-you-completed-a-paper-assessment #}
           <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
             {{ card({
-              "href": "/paper-transfer/have-you-completed-a-paper-assessment",
+              "href": "/paper-transfer/_dls-parts",
               "clickable": "true",
               "heading": "Paper transfer journey",
               "headingClasses": "nhsuk-heading-s",
