--- a/app/views/prototypes/paper-transfer-process/confirmation/index.html
+++ b/app/views/prototypes/paper-transfer-process/confirmation/index.html
@@ -33,7 +33,7 @@
           {# TODO - Add final page to send users after completing a prototype #}
           {{ button({
             text: "Go back to assessment home page",
-            href: "/finished"
+            href: "/paper-transfer/_dls-parts/iv-therapy"
           }) }}
         </div>
 
