Update content and tidy page templates

--- a/app/views/prototypes/paper-transfer-process/confirmation/index.html
+++ b/app/views/prototypes/paper-transfer-process/confirmation/index.html
@@ -12,20 +12,14 @@
   <div class="nhsuk-width-container">
     <div class="nhsuk-grid-row">
       <div class="nhsuk-grid-column-full">
-        {{ backLink({
-          href: "/paper-transfer",
-          text: "Go back"
-        }) }}
-
-        {# CONTENT - discuss the content of this page #}
         <h1>Paper assessment submitted for review</h1>
 
         <div class="content-group">
-          <p>The information you have provided has been sent to your educator or manager for review</p>
+          <p>The information you have provided has been sent to your educator or supervisor for review.</p>
 
           <h2>What happens next</h2>
-          <p>You will recive an email shortly confirming your paper assessment information has been sent to your educator or manager</p>
-          <p>Once your educator has reviewed the information you have submitted you will be emailed with confirmation of the outcome</p>
+          <p>You will recive an email confirming your paper assessment information has been sent to your educator or supervisor.</p>
+          <p>Once your educator or supervisor has reviewed the information you will reccive a confirmtion emailed detailing the outcome.</p>
         </div>
 
         <div class="content-group">
